# secret_project_codename01

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
sources/: hello_world.cpp
